# MikroTikAPI

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  LICENSE  LICENSE.rtf  README.md
cmake/: FindSphinx.cmake  MikroTikApiConfig.cmake.in  WinInstallerGUID.cmake  dependencies-MikroTikApi.cmake  utils.cmake  warnings-MikroTikApi.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/example/: index.rst  mikrottyk.rst
docs/install/: fetchcontent.rst  index.rst  install.rst
docs/static/: ibm-font.css
docs/tutorial/: api.rst  index.rst  tut.rst
example/: CMakeLists.txt
example/tty/: CMakeLists.txt  README.md  main.cpp
example/tty/lib/: cxxopts.hpp  fmt.hpp  magic_enum.hpp
include/mikrotik/api/: api_handler.hpp  attribute.hpp  command.hpp  ip_address.hpp  query.hpp  reply.hpp  sentence.hpp
include/mikrotik/api/exception/: bad_ip_format.hpp  bad_socket.hpp  bad_word.hpp
include/mikrotik/api/impl/: sockets.hpp
src/: api_handler.cpp  attribute.cpp  bad_ip_format.cpp  bad_socket.cpp  bad_word.cpp  calc_len.cpp  command.cpp  ip_address.cpp  query.cpp  reply.cpp  sentence.cpp  sockets.common.cpp  sockets.posix.cpp  sockets.winsock.cpp  split.cpp
src/impl/: calc_len.hpp  socket_funcs.hpp  split.hpp
test/: CMakeLists.txt  test.attribute.cpp  test.bad_ip_format.cpp  test.bad_socket.cpp  test.bad_word.cpp  test.calc_len.cpp  test.command.cpp  test.ip_address.cpp  test.main.cpp  test.query.cpp  test.sentence.cpp  test.split.cpp
